--- a/src/Unity.NLog.csproj
+++ b/src/Unity.NLog.csproj
@@ -25,12 +25,12 @@
   
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <TargetFrameworks>net45;net47</TargetFrameworks>
+    <TargetFrameworks>netstandard1.5;netstandard2.0;net4;net45;net47</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFramework>netstandard1.5</TargetFramework>
     <DebugType>Full</DebugType>
   </PropertyGroup>
 
@@ -44,7 +44,7 @@
 
 
   <ItemGroup>
-    <PackageReference Include="NLog" Version="4.4.12" />
+    <PackageReference Include="NLog" Version="4.4.*" />
   </ItemGroup>
 
 
