--- a/src/Unity.NLog.csproj
+++ b/src/Unity.NLog.csproj
@@ -44,7 +44,7 @@
 
 
   <ItemGroup>
-    <PackageReference Include="NLog" Version="4.4.*" />
+    <PackageReference Include="NLog" Version="4.4.12" />
   </ItemGroup>
 
 
