--- a/src/Unity.NLog.csproj
+++ b/src/Unity.NLog.csproj
@@ -25,12 +25,12 @@
   
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <TargetFrameworks>netstandard2.0;net4;net45;net47</TargetFrameworks>
+    <TargetFrameworks>net4;net45;net47</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <TargetFramework>netstandard1.5</TargetFramework>
+    <TargetFramework>net45</TargetFramework>
     <DebugType>Full</DebugType>
   </PropertyGroup>
 
