--- a/package.props
+++ b/package.props
@@ -1,8 +1,8 @@
 <Project>
 
   <PropertyGroup>
-    <Version>1.0.0</Version>
-    <PackageReleaseNotes>This package is distributed as .NET 4.0, 4.5, 4.7 package</PackageReleaseNotes>
+    <Version>1.0.1</Version>
+    <PackageReleaseNotes>This package is distributed as .NET 4.0, 4.5, 4.6, 4.7 package</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup>
