--- a/tests/NLog.Tests.csproj
+++ b/tests/NLog.Tests.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup Condition="!Exists('$(UnityAbstractions)')">
-    <PackageReference Include="Unity.Abstractions" Version="$(UnityAbstractionsVersion)" />
+    <PackageReference Include="Unity.Abstractions" Version="5.11.1" />
   </ItemGroup>
 
   <ItemGroup Condition="!Exists('$(UnityContainer)')">
