--- a/src/Unity.NLog.csproj
+++ b/src/Unity.NLog.csproj
@@ -7,7 +7,7 @@
     <AssemblyVersion>$(Version).0</AssemblyVersion>
     <PackageId>Unity.NLog</PackageId>
     <Description>Unity adapter for NLog</Description>
-    <Copyright>Copyright © Unity Container Project 2018</Copyright>
+    <Copyright>Copyright © .NET Foundation and Contributors. All Rights Reserved</Copyright>
     <PackageProjectUrl>https://github.com/unitycontainer/NLog</PackageProjectUrl>
     <RepositoryUrl>https://github.com/unitycontainer/NLog</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/unitycontainer/NLog/blob/master/LICENSE</PackageLicenseUrl>
